--- a/Day-2/package.json
+++ b/Day-2/package.json
@@ -4,7 +4,7 @@
   "description": "Server that delivers HTML",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
