--- a/Day-3/package.json
+++ b/Day-3/package.json
@@ -4,7 +4,7 @@
   "description": "Practicing node",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js -L",
     "writeHere": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
