--- a/Day-10/package.json
+++ b/Day-10/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^5.5.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.15",
     "xss-clean": "^0.1.1"
   },
